...
            Button("Submit") {
                loadNewMovie(username: username, roomID: roomID, title: movie)
                refresh()
            }
            Spacer()
            
            Button("Spin") {
                let randomRotation =  Double(Int.random(in: 1440...3600))
                
                rotationAngle = rotationAngle + randomRotation
                
                DispatchQueue.main.asyncAfter(deadline: .now() + 1) {
                    winner = getWinner(rotation: rotationAngle, movieItems: movieItems)
...
                    Triangle()
                        .foregroundColor(.yellow)
                        .frame(width: 50, height: 190)
                    Spacer()
                }
            }
            Text(winner).accessibilityIdentifier("Result")
        }
        
    }
    
    func randomDegree() -> Double {
        return Double.random(in: 0.0...720.0) + rotationAngle
...
